Fixed the z-index of the slowdown div

--- a/styles.css
+++ b/styles.css
@@ -80,6 +80,7 @@ div.slowdown {
     display: flex;
     align-items: center;
     flex-direction: column;
+	z-index: 1000;
 }
 
 div.slowProgress {
